<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject_edittext"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:autofillHints=""
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_editext"
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update"
            android:text="@string/ok"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="@color/colorPrimaryDark"
            android:textColor="#040404"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:layout_weight="1"
            android:text="@string/delete"
            style="?android:attr/buttonBarStyle"
            android:background="#F80C44"
            android:textColor="#040404"/>






    </LinearLayout>


</LinearLayout>